// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput component renders 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }
}

@media  {
  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }
}

@media  {
  .c-oUmPa-jCxibG-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-oUmPa-jCxibG-cv:not(:disabled):hover,
  .c-oUmPa-jCxibG-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-jCxibG-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }
}

@media  {
  .c-PJLV-ieFlhpX-css {
    position: relative;
    height: max-content;
  }

  .c-oUmPa-igEsmBj-css {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 0;
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-ieFlhpX-css"
  >
    <div
      class="c-dhzjXW c-kOvGWL c-kOvGWL-dNqCDY-size-md"
    >
      <input
        aria-label="test"
        class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-foJWJd"
        name="date"
        type="text"
        value=""
      />
    </div>
    <button
      aria-controls="radix-0"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Open calendar"
      class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-jCxibG-cv c-oUmPa-igEsmBj-css"
      data-state="closed"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 5h18v16H3V5Zm18 4H3m4-4V3m10 2V3"
        />
        <rect
          height="2"
          width="2"
          x="15"
          y="15"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`DateInput component renders lg size 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-fPxPMR {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-gap: var(--space-1) var(--space-2);
  }

  .c-nNuCY {
    background: transparent;
    border: none;
    border-radius: var(--radii-round);
    color: var(--colors-tonal900);
    cursor: pointer;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    height: var(--sizes-3);
    width: var(--sizes-3);
    padding: 0;
    transition: all 75ms;
  }

  .c-nNuCY:hover {
    background: var(--colors-tonal100);
  }

  .c-nNuCY:active {
    color: white;
    background: var(--colors-primary800);
  }

  .c-nNuCY:focus {
    outline: 2px solid var(--colors-primary800);
    outline-offset: 2px;
  }

  .c-nNuCY[disabled] {
    opacity: 0.3;
    cursor: default;
  }

  .c-fARQYB {
    fill: white;
    z-index: 1;
  }

  [data-align="end"] .c-fARQYB {
    margin-right: var(--sizes-2);
  }

  [data-align="start"] .c-fARQYB {
    margin-left: var(--sizes-2);
  }

  .c-iKnjyA {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-2);
    max-width: 90vw;
    padding: var(--sizes-2);
    padding-right: var(--space-6);
    position: relative;
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-iKnjyA[data-state="open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}
}

@media  {
  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-kaaUSm-jyNkKc-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-jyNkKc-size-md .c-hMRxhp {
    height: 20px;
    width: 20px;
  }

  .c-dyvMgW-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-dyvMgW-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-dyvMgW-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }

  .c-nNuCY-huXVXM-isOutsideMonth-true {
    color: var(--colors-tonal200);
  }

  .c-nNuCY-hztIub-isToday-true {
    background: var(--colors-tonal100);
  }

  .c-iKnjyA-kUaMfZ-size-md {
    max-width: 400px;
  }

  .c-nNuCY-hewsLb-isSelected-true {
    background: var(--colors-primary800);
    color: white;
  }

  .c-nNuCY-hewsLb-isSelected-true:hover {
    background: var(--colors-primary800);
  }

  .c-kOvGWL-hSbHZR-size-lg {
    height: var(--sizes-5);
  }
}

@media  {
  .c-oUmPa-jCxibG-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-oUmPa-jCxibG-cv:not(:disabled):hover,
  .c-oUmPa-jCxibG-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-jCxibG-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }

  .c-kaaUSm-klvXVG-cv {
    background: white;
    color: var(--colors-primary800);
  }

  .c-kaaUSm-klvXVG-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-klvXVG-cv:not([disabled]):hover,
  .c-kaaUSm-klvXVG-cv:not([disabled]):focus {
    background: rgba(255, 255, 255, 0.9);
    color: var(--colors-primary800);
  }

  .c-kaaUSm-klvXVG-cv:not([disabled]):active {
    background: rgba(255, 255, 255, 0.75);
  }
}

@media  {
  .c-PJLV-ieFlhpX-css {
    position: relative;
    height: max-content;
  }

  .c-oUmPa-igEsmBj-css {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 0;
  }

  .c-PJLV-ijkIlaT-css {
    position: relative;
    width: min-content;
    margin-top: calc(var(--space-1)*-1);
  }

  .c-dhzjXW-ihOOvbW-css {
    position: absolute;
    top: 0;
    right: calc(var(--space-1)*-1);
  }

  .c-dhzjXW-iePfWBT-css {
    height: var(--sizes-4);
    align-items: center;
    margin-bottom: var(--space-4);
  }

  .c-kaaUSm-ikwYYXS-css {
    padding-left: 0;
    padding-right: 0;
    color: var(--colors-tonal600);
  }

  .c-fPxPMR-ihbtntv-css {
    margin-bottom: var(--space-3);
  }

  .c-dyvMgW-idQvJRf-css {
    font-weight: 600;
    text-align: center;
  }

  .c-iKnjyA-ijdzfXb-css {
    padding-right: var(--sizes-2);
    z-index: 1147483646;
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-ieFlhpX-css"
  >
    <div
      class="c-dhzjXW c-kOvGWL c-kOvGWL-hSbHZR-size-lg"
    >
      <input
        aria-label="test"
        class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-foJWJd"
        name="date"
        type="text"
        value=""
      />
    </div>
    <button
      aria-controls="radix-8"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Open calendar"
      class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-jCxibG-cv c-oUmPa-igEsmBj-css"
      data-state="closed"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 5h18v16H3V5Zm18 4H3m4-4V3m10 2V3"
        />
        <rect
          height="2"
          width="2"
          x="15"
          y="15"
        />
      </svg>
    </button>
  </div>
</div>
`;
